test/errors/value/list/sort.yasl
const x = [ 1, 'a' ]

x->sort()
